CB-4823 fixes table error overflow and icon position

--- a/webapp/packages/plugin-data-viewer/src/TableViewer/TableError.module.css
+++ b/webapp/packages/plugin-data-viewer/src/TableViewer/TableError.module.css
@@ -28,7 +28,6 @@
 .errorBody {
   display: flex;
   gap: 24px;
-  align-items: center;
   margin-bottom: 24px;
 }
 .errorMessage {
@@ -63,7 +62,6 @@
 }
 
 .animated {
-  overflow: hidden;
   pointer-events: auto;
   opacity: 1;
 }
